tests/integration/conformance/testdata/k8s/ingress/merge/stage1/input.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foo
  namespace: ns
  annotations:
    kubernetes.io/ingress.class: "cls"
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /foo
            backend:
              serviceName: service1
              servicePort: 4200
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bar
  namespace: ns
  annotations:
    kubernetes.io/ingress.class: "cls"
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /bar
            backend:
              # The service has changed since the initial config.
              serviceName: service5
              servicePort: 5000
---
