tests/integration/conformance/testdata/k8s/ingress/merge/stage1/mcp.yaml
constraints:
  - collection: istio/networking/v1alpha3/gateways
    check:
      - exactlyOne:
          - equals: {
            "Body": {
              "selector": {
                "istio": "ingress"
              },
              "servers": [
              {
                "hosts": [
                  "*"
                ],
                "port": {
                  "name": "http-80-i-foo-{{.Namespace}}",
                  "number": 80,
                  "protocol": "HTTP"
                }
              }
              ]
            },
            "Metadata": {
              "name": "istio-system/foo-istio-autogenerated-k8s-ingress"
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.Gateway"
          }
      - exactlyOne:
          - equals: {
            "Metadata": {
              "name": "istio-system/foo-istio-autogenerated-k8s-ingress"
            },
            "Body": {
              "selector": {
                "istio": "ingress"
              },
              "servers": [
              {
                "hosts": [
                  "*"
                ],
                "port": {
                  "name": "http-80-i-foo-{{.Namespace}}",
                  "number": 80,
                  "protocol": "HTTP"
                }
              }
              ]
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.Gateway"
          }

  - collection: istio/networking/v1alpha3/virtualservices
    check:
      - exactlyOne:
          - equals: {
            "Body": {
              "gateways": [
                "istio-autogenerated-k8s-ingress"
              ],
              "hosts": [
                "foo.bar.com"
              ],
              "http": [
              {
                "match": [
                {
                  "uri": {
                    "MatchType": {
                      "Exact": "/bar"
                    }
                  }
                }
                ],
                "route": [
                {
                  "destination": {
                    "host": "service5.{{.Namespace}}.svc.cluster.local",
                    "port": {
                      "Port": {
                        "Number": 5000
                      }
                    }
                  },
                  "weight": 100
                }
                ]
              },
              {
                "match": [
                {
                  "uri": {
                    "MatchType": {
                      "Exact": "/foo"
                    }
                  }
                }
                ],
                "route": [
                {
                  "destination": {
                    "host": "service1.{{.Namespace}}.svc.cluster.local",
                    "port": {
                      "Port": {
                        "Number": 4200
                      }
                    }
                  },
                  "weight": 100
                }
                ]
              }
              ]
            },
            "Metadata": {
              "name": "istio-system/foo-bar-com-bar-istio-autogenerated-k8s-ingress"
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.VirtualService"
          }
